# CmakeDemo

./: .gitignore  CMakeLists.txt  log.cpp  log.hpp  main.cpp  test.h
cmake/: common.cmake
